feat(release): add Stable and Nightly channels
Give Stable and Nightly distinct Windows identities, update feeds, workspaces, and workspace-scoped desktop preferences. Add explicit channel-switch UX and a guarded one-time Stable-to-Nightly settings snapshot before persistence opens, without live synchronization or reverse migration.

Add signed release publication ordering, immutable manifest generation, dual-channel native verification, and updated installation/release guidance. Verified with the full 305-test reactor, Python contract suites, and Stable/Nightly jpackage app-image structure and launcher smokes without system Java.