@@ -212,35 +212,25 @@ Choose the path that matches what you want to do:
 | **PR build** | A temporary build containing selected open pull requests | Expires automatically |
 | **Source build** | A local Maven build from the repository | Built on demand from the checked-out commit |
 
-### ⬇️ Download a Windows bundle
+### ⬇️ Install Frostguard on Windows
 
-Frostguard currently provides verified Windows desktop bundles. Java 21 or
-newer is required; Git and Maven are not.
+Stable and Nightly use separate, self-contained Windows applications. Git,
+Maven, and a separately installed Java runtime are not required.
 
-- **[Stable for Windows](https://github.com/Shederator/wosbot/releases/latest/download/frostguard-windows-desktop-bundle.zip)**
-- **[Nightly for Windows](https://github.com/Shederator/wosbot/releases/download/nightly/frostguard-windows-desktop-bundle.zip)**
+- **[Latest Stable release](https://github.com/Shederator/wosbot/releases/latest)**
+- **[Signed Nightly releases](https://github.com/Shederator/wosbot/releases)**
 
 After choosing a build:
 
-1. Extract the complete ZIP into an empty folder. Do not run it from inside the ZIP.
-2. Double-click the versioned **`frostguard-<version>.jar`** file.
-3. Open **Configuration** and select your emulator's command-line controller.
-
-> [!NOTE]
-> The included `Start Frostguard.bat` launcher is currently unsigned and may be
-> blocked by Windows 11 Smart App Control. Do not disable Windows security solely
-> to run Frostguard. If double-clicking the JAR does not start Frostguard, or if
-> you want to see its startup output, open PowerShell in the extracted folder and
-> run:
->
-> ```powershell
-> $appJar = Get-ChildItem -File "frostguard-*.jar" | Select-Object -First 1
-> java --enable-native-access=ALL-UNNAMED -jar $appJar.FullName
-> ```
+1. Download the Windows x64 EXE for the desired channel.
+2. Verify the Frostguard publisher shown by Windows and run the installer.
+3. Start **Frostguard** or **Frostguard Nightly** from its shortcut.
+4. Open **Configuration** and select your emulator's command-line controller.
 
 > [!IMPORTANT]
-> Keep the extracted folder together. The launcher, application JAR, runtime
-> libraries, OCR data and templates are all part of the installation.
+> Stable and Nightly keep separate settings and databases and can run side by
+> side. The first Nightly start can copy a one-time Stable snapshot; changes are
+> not synchronized afterward.
 
 See the **[complete installation guide](docs/installation.md)** for Java,
 emulator and game settings.
